<resources>
    <string name="app_name" translatable="false">WebView Project</string>
    <string name="dosyagezgini">Dosya Gezgini</string>
    <string name="dosyasecici">Dosya Seçici</string>
    <string name="dosyaerror">Dosya Seçici Açılamıyor</string>
    <string name="indstarted">İndirme Başladı..</string>
    <string name="indfinish">İndirme Sonlandı!</string>


    <string name="url1" translatable="false">https://google.com</string>
    <string name="url2" translatable="false">https://virustotal.com</string>
    <string name="url3" translatable="false">https://google.com/</string>
    <string name="url4" translatable="false">https://google.com/</string>
    <string name="url5" translatable="false">https://google.com/</string>

    <string name="nav1">Main Page</string>
    <string name="nav2">Second</string>
    <string name="nav3">Cool</string>
    <string name="nav4">Repos</string>
    <string name="nav5">Settings</string>


    <string name="errorcode">\"Hata Kodu: \"</string>
    <string name="description">\"Açıklama: \"</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>


    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3039242376817399/4775764161</string>
    <string name="int_ad_unit_id" translatable="false">ca-app-pub-3039242376817399/4420540945</string>
    <string name="rewarded_ad_unit_id" translatable="false">ca-app-pub-3039242376817399/4392620783</string>
    <string name="app_ad_id" translatable="false">ca-app-pub-3039242376817399~8547681739</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="sync_title">Sync Passwords</string>
    <string name="attachment_title">Download Files</string>
    <string name="attachment_summary_off">Doesn\'t allows  to downloads</string>
    <string name="attachment_summary_on">Allows all dowload operations</string>
    <string name="jsoff">Bir çok işlem gerçekleşmez</string>
    <string name="json">Allows all upload progress</string>
    <string name="offupload">Doesn\'t allows to uploads</string>
    <string name="uploadd">Dosyaları Yükle</string>
    <string name="cook">Allow Cookies</string>
    <string name="aca">Allow Content Access</string>
    <string name="afa">Allow File Access</string>
    <string name="cache">Allow Cache</string>
    <string name="zoom">Allow Zoom</string>
    <string name="developacc" translatable="false">https://play.google.com/store/apps/developer?id=TALAT+ALTIN</string>
    <string name="deva">Developer Account</string>
    <string name="morething">More</string>
    <string name="chooseemail">Choose an email application</string>
    <string name="email" translatable="false">ksmtrkn2@gmail.com</string>
    <string name="rest">May need to restart</string>
    <string name="darkmode">Dark Mode</string>
    <string name="lowapi">Düşük Android Sürümü</string>
    <string name="downimg">Download Image From Below</string>
    <string name="saveimg">Save - Download Image</string>

</resources>
