<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_out_home"
        android:title="@string/nav1" />
    <item
        android:id="@+id/navigation_sms"
        android:icon="@drawable/ic_out_catmsc"
        android:title="@string/nav2" />

    <item
        android:id="@+id/navigation_third"
        android:icon="@drawable/ic_out_catmsc"
        android:title="@string/nav3" />

    <item
        android:id="@+id/navigation_four"
        android:icon="@drawable/ic_out_msc"
        android:title="@string/nav4" />

    <item
        android:id="@+id/navigation_five"
        android:icon="@drawable/ic_out_settings"
        android:title="@string/nav5" />
</menu>